update index and readme file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images\profile.jpg" alt="" /></a>
 					<h1><strong>I am Peebles Jerkin Pintucan</strong>, Machine Learning Engineer<br />
 					Download <a href="http://html5up.net">RESUME</a>.</h1>
 				</div>
@@ -26,9 +26,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>About Me</h2>
+							<h2>Hire Me</h2>
 						</header>
-						<p>An aspiring machine learning engineer, wanting to break into tech</p>
+						<p>An aspiring machine learning engineer with a passion for building intelligent systems that can solve complex problems. With competence in Python programming, data analysis, and deep learning frameworks like TensorFlow and PyTorch, I am confident in my ability to design and develop robust machine learning models that can provide valuable insights and drive business growth.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -36,7 +36,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -436,10 +436,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://twitter.com/PeebsTech" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/Peebs-Tech" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/pintucan-pj/" class="icon brands fa-dribbble"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/pintucan-pj/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="kinpintucan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/PeebsTech" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; PeebsTech</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
