added a line break for the resume

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images\profile.jpg" alt="" /></a>
-					<h1><strong>I am Peebles Jerkin Pintucan</strong>, Machine Learning Engineer<br />
-					Download <a href="http://html5up.net">RESUME</a>.</h1>
+					<h1><strong>I am Peebles Jerkin Pintucan</strong>, </h1> <p> Machine Learning Engineer </p> 
+					Download <a href="http://html5up.net">RESUME</a>.
 				</div>
 			</header>
 
