added various updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images\profile.jpg" alt="" /></a>
 					<h1><strong>I am Peebles Jerkin Pintucan</strong>, </h1> <p> Machine Learning Engineer </p> 
-					Download <a href="http://html5up.net">RESUME</a>.
+					Download <a href="https://drive.google.com/file/d/18uPDUHbrQlsSpeCHO6jG52_hdyyl8lCJ/view?usp=share_link">RESUME</a>.
 				</div>
 			</header>
 
@@ -30,7 +30,7 @@
 						</header>
 						<p>An aspiring machine learning engineer with a passion for building intelligent systems that can solve complex problems. With competence in Python programming, data analysis, and deep learning frameworks like TensorFlow and PyTorch, I am confident in my ability to design and develop robust machine learning models that can provide valuable insights and drive business growth.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://github.com/Peebs-Tech" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -39,38 +39,23 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/Peebs-Tech/Computer-Vision---Food101" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Computer Vision using Food101 dataset</h3>
+								<p>EfficientNetB4 with 83.66% accuracy</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/Peebs-Tech/californiahouse" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<h3>California House Pricing</h3>
+								<p>Regression Model using Scikit-Learn and Heroku</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/Peebs-Tech/NaturalLanguageProcessing_SkimLit" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3>NLP using PubMed20k RCT</h3>
+								<p>Classify sentences which appear in sequential order using concepts of tokenization and embedding</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/Peebs-Tech?tab=repositories" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
@@ -80,16 +65,16 @@
 						<p>Feel free to get in touch with me if you have any questions or would like to discuss further.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="#">
+								<form method="post" action="send-email.php">
 									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+									  <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+									  <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+									  <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
+									<ul class="actions">
+									  <li><input type="submit" value="Send Message" /></li>
+									</ul>
+								  </form>
 							</div>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
@@ -105,7 +90,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">kinpintucan@gmail.com</a>
+										<a href="mailto:kinpintucan@gmail.com">kinpintucan@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -438,7 +423,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://github.com/Peebs-Tech" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/pintucan-pj/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="kinpintucan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:kinpintucan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://twitter.com/PeebsTech" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
