finally removed the error from git

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Peebs-Tech/Computer-Vision---Food101" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="https://github.com/Peebs-Tech/Computer-Vision---Food101" class="image fit thumb"><img src="images/thumbs/logo.PNG" alt="" /></a>
 								<h3>Computer Vision using Food101 dataset</h3>
 								<p>EfficientNetB4 with 83.66% accuracy</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Peebs-Tech/californiahouse" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="https://github.com/Peebs-Tech/californiahouse" class="image fit thumb"><img src="images/thumbs/logo.PNG" alt="" /></a>
 								<h3>California House Pricing</h3>
 								<p>Regression Model using Scikit-Learn and Heroku</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/Peebs-Tech/NaturalLanguageProcessing_SkimLit" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="https://github.com/Peebs-Tech/NaturalLanguageProcessing_SkimLit" class="image fit thumb"><img src="images/thumbs/logo.PNG" alt="" /></a>
 								<h3>NLP using PubMed20k RCT</h3>
-								<p>Classify sentences which appear in sequential order using concepts of tokenization and embedding</p>
+								<p>Classify sentences which appear in sequential order using concepts of tokenization and embedding.</p>
 							</article>
 						</div>
 						<ul class="actions">
