open new tab links

--- a/index.html
+++ b/index.html
@@ -421,10 +421,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/Peebs-Tech" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/pintucan-pj/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="mailto:kinpintucan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://twitter.com/PeebsTech" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/Peebs-Tech" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/pintucan-pj/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:kinpintucan@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/PeebsTech" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; PeebsTech</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
