--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images\profile.jpg" alt="" /></a>
 					<h1><strong>I am Peebles Jerkin Pintucan</strong>, </h1> <p> Machine Learning Engineer </p> 
-					Download <a href='https://storage.googleapis.com/peebs-professional-files/PINTUCAN_RESUME.pdf' target="_blank" download>RESUME</a>.
+					Download <a href='https://storage.googleapis.com/peebs-professional-files/PINTUCAN_RESUME.pdf' target="_blank">RESUME</a>.
 				</div>
 			</header>
 
