send form fixed - using Basin

--- a/index.html
+++ b/index.html
@@ -68,17 +68,30 @@
 						<p>Feel free to get in touch with me if you have any questions or would like to discuss further.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="send-email.php">
+								<form method="post" action="https://usebasin.com/f/5b4528787c80">
 									<div class="row gtr-uniform gtr-50">
 									  <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 									  <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
 									  <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
 									<ul class="actions">
-									  <li><input type="submit" value="Send Message" /></li>
+									  <li><input type="submit" value="Send Message"/></li>
 									</ul>
 								</form>
+								
 							</div>
+									<script type="text/javascript">
+										function configureAhoy() {
+										ahoy.configure({
+										visitsUrl: "https://usebasin.com/ahoy/visits",
+										eventsUrl: "https://usebasin.com/ahoy/events",
+										page: "5b4528787c80" /* Use your form id here */
+										});
+										ahoy.trackView();
+										ahoy.trackSubmits();
+										}
+									</script>
+									<script src="https://cdn.jsdelivr.net/npm/ahoy.js@0.3.9/dist/ahoy.min.js" async defer onload="configureAhoy()">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
