--- a/index.html
+++ b/index.html
@@ -80,18 +80,25 @@
 								</form>
 								
 							</div>
-									<script type="text/javascript">
-										function configureAhoy() {
-										ahoy.configure({
-										visitsUrl: "https://usebasin.com/ahoy/visits",
-										eventsUrl: "https://usebasin.com/ahoy/events",
-										page: "5b4528787c80" /* Use your form id here */
-										});
-										ahoy.trackView();
-										ahoy.trackSubmits();
-										}
-									</script>
-									<script src="https://cdn.jsdelivr.net/npm/ahoy.js@0.3.9/dist/ahoy.min.js" async defer onload="configureAhoy()">
+							<head>
+								<script type="text/javascript">
+								  function configureAhoy() {
+									ahoy.configure({
+									  visitsUrl: "https://usebasin.com/ahoy/visits",
+									  eventsUrl: "https://usebasin.com/ahoy/events",
+									  page: "5b4528787c80" /* Use your form id here */
+									});
+									ahoy.trackView();
+									ahoy.trackSubmits();
+								  }
+								</script>
+								<script
+								  src="https://cdn.jsdelivr.net/npm/ahoy.js@0.3.9/dist/ahoy.min.js"
+								  async
+								  defer
+								  onload="configureAhoy()"
+								></script>
+							</head>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
