--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
 -->
 <html>
 	<head>
-		<title>Peebles Jerkin Pintucan</title>
+		<title>Portfolio by Peebs-Tech</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	
+	<head>
+		<script type="text/javascript">
+		  function configureAhoy() {
+			ahoy.configure({
+			  visitsUrl: "https://usebasin.com/ahoy/visits",
+			  eventsUrl: "https://usebasin.com/ahoy/events",
+			  page: "5b4528787c80" /* Use your form id here */
+			});
+			ahoy.trackView();
+			ahoy.trackSubmits();
+		  }
+		</script>
+		<script
+		  src="https://cdn.jsdelivr.net/npm/ahoy.js@0.3.9/dist/ahoy.min.js"
+		  async
+		  defer
+		  onload="configureAhoy()"
+		></script>
+	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
